--- a/UI/search.html
+++ b/UI/search.html
@@ -43,7 +43,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Evently Friends</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -53,10 +53,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">Friends Near You</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Events</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
@@ -78,13 +78,20 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
-            </div>
+                <div class="intro-lead-in" style="color: #fec503;">Welcome To Evently Friends!</div>
+                <div class="intro-heading">Find your friends around you!</div>
+                <div class="row">
+                <div class="col-sm-6 col-sm-offset-3">
+                    <div class="input-group">
+                    <input type="text" class="form-control" placeholder="ENTER LOCATION..." style="height: 36px; min-width: 223px;" />
+                    <a href="#services" class="page-scroll btn btn-xl input-group-addon">Search</a>           
+                    </div>
+            </div>  
+        </div>
+        </div>
         </div>
     </header>
-
+    <div style="display: none;">
     <!-- Services Section -->
     <section id="services">
         <div class="container">
@@ -302,6 +309,8 @@
         </div>
     </section>
 
+    <!-- HEREEE YOU HAVE HIDDEN EVERYTHING -->
+    </div>
     <!-- Team Section -->
     <section id="team" class="bg-light-gray">
         <div class="container">
@@ -312,10 +321,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Kay Garland</h4>
+                        <h4>Saurabh Deochake</h4>
                         <p class="text-muted">Lead Designer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
@@ -327,25 +336,11 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Marketer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
+                
+                <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
+                        <h4>Risham Chokshi</h4>
                         <p class="text-muted">Lead Developer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
