--- a/UI/search.html
+++ b/UI/search.html
@@ -95,7 +95,7 @@
             </div>
 
         </header>
-        <div style="/*display: none;*/">
+        <div>
             <!-- Services Section -->
             <section id="services">
                 <div class="container">
@@ -322,7 +322,7 @@
                     <div class="row">
                         <div class="col-lg-12 text-center">
                             <h2 class="section-heading">Our Amazing Team</h2>
-                            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                            <h3 class="section-subheading text-muted">consists of Rutgers University Students pursing their Masters in Computer Science</h3>
                         </div>
                     </div>
                     <div class="row">
@@ -330,7 +330,7 @@
                             <div class="team-member">
                                 <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
                                 <h4>Saurabh Deochake</h4>
-                                <p class="text-muted">Lead Designer</p>
+                                <p class="text-muted">Lead Backend Developer</p>
                                 <ul class="list-inline social-buttons">
                                     <li><a href="#"><i class="fa fa-twitter"></i></a>
                                     </li>
@@ -346,7 +346,7 @@
                             <div class="team-member">
                                 <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
                                 <h4>Risham Chokshi</h4>
-                                <p class="text-muted">Lead Developer</p>
+                                <p class="text-muted">Lead Frontend Developer</p>
                                 <ul class="list-inline social-buttons">
                                     <li><a href="#"><i class="fa fa-twitter"></i></a>
                                     </li>
@@ -360,7 +360,7 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2 text-center">
-                            <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                            <p class="large text-muted">We have a dedicated team of two graduate computer science students who started their idea at Rutgers University in Computer Networks class. Please feel free to contact us and share your opinion about Evently Friends.</p>
                         </div>
                     </div>
                 </div>
