--- a/UI/search.html
+++ b/UI/search.html
@@ -332,11 +332,11 @@
                                 <h4>Saurabh Deochake</h4>
                                 <p class="text-muted">Lead Backend Developer</p>
                                 <ul class="list-inline social-buttons">
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a>
+                                    <li><a href="https://www.twitter.com/saurabhd04"><i class="fa fa-twitter"></i></a>
                                     </li>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a>
+                                    <li><a href="https://www.facebook.com/saurabh.deochake"><i class="fa fa-facebook"></i></a>
                                     </li>
-                                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                                    <li><a href="https://www.linkedin.com/in/saurabhdeochake/"><i class="fa fa-linkedin"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -350,9 +350,9 @@
                                 <ul class="list-inline social-buttons">
                                     <li><a href="#"><i class="fa fa-twitter"></i></a>
                                     </li>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a>
+                                    <li><a href="https://www.facebook.com/risham.chokshi"><i class="fa fa-facebook"></i></a>
                                     </li>
-                                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                                    <li><a href="https://www.linkedin.com/in/rishamchokshi/"><i class="fa fa-linkedin"></i></a>
                                     </li>
                                 </ul>
                             </div>
