about section has been updated

--- a/UI/search.html
+++ b/UI/search.html
@@ -238,8 +238,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
-                            <h2 class="section-heading">About</h2>
-                            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                            <h2 class="section-heading">About Us</h2>
+                            <h3 class="section-subheading text-muted">Our idea originated and evolved in Computer Network course in Rutgers University</h3>
                         </div>
                     </div>
                     <div class="row">
@@ -247,57 +247,57 @@
                             <ul class="timeline">
                                 <li>
                                     <div class="timeline-image">
-                                        <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                        <img class="img-circle img-responsive" src="img/about/SM.jpg" alt="">
                                     </div>
                                     <div class="timeline-panel">
                                         <div class="timeline-heading">
-                                            <h4>2009-2011</h4>
+                                            <h4>February 2017</h4>
                                             <h4 class="subheading">Our Humble Beginnings</h4>
                                         </div>
                                         <div class="timeline-body">
-                                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                            <p class="text-muted">It started when we were pondering upon different social media and trying to find out what we could do at a particular location. We were able to combine different posts our friends posted but we weren't sure who we might find and how long we should stay?</p>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="timeline-inverted">
                                     <div class="timeline-image">
-                                        <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                        <img class="img-circle img-responsive" src="img/about/AB.jpg" alt="">
                                     </div>
                                     <div class="timeline-panel">
                                         <div class="timeline-heading">
-                                            <h4>March 2011</h4>
+                                            <h4>March 2017</h4>
                                             <h4 class="subheading">An Agency is Born</h4>
                                         </div>
                                         <div class="timeline-body">
-                                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                            <p class="text-muted">We decided that this is a real problem that everyone faces. We have all these tools but there is no way to merge them and find out one simple answer! We created a platform that would combine all your friends + events near you.</p>
                                         </div>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="timeline-image">
-                                        <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                        <img class="img-circle img-responsive" src="img/about/TP.jpeg" alt="">
                                     </div>
                                     <div class="timeline-panel">
                                         <div class="timeline-heading">
-                                            <h4>December 2012</h4>
+                                            <h4>April 2017</h4>
                                             <h4 class="subheading">Transition to Full Service</h4>
                                         </div>
                                         <div class="timeline-body">
-                                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                            <p class="text-muted">Different social media are integrated together to create a platform which gives you information about events and people you might know attending. This would help you network, and make you more likely to go outsideto a particular event. It would also give you details about what kind of event it is and how long it will last! </p>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="timeline-inverted">
                                     <div class="timeline-image">
-                                        <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                        <img class="img-circle img-responsive" src="img/about/FG.jpg" alt="">
                                     </div>
                                     <div class="timeline-panel">
                                         <div class="timeline-heading">
-                                            <h4>July 2014</h4>
-                                            <h4 class="subheading">Phase Two Expansion</h4>
+                                            <h4>May 2017</h4>
+                                            <h4 class="subheading">Coming soon Phase...</h4>
                                         </div>
                                         <div class="timeline-body">
-                                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                            <p class="text-muted">Algorithms would store and detect all the similarities between different places on instagram, and Facebook. Instead of only looking at hashtags, it would also look at pictures. Map all usernames from different social media to point to one specific user</p>
                                         </div>
                                     </div>
                                 </li>
@@ -305,7 +305,7 @@
                                     <div class="timeline-image">
                                         <h4>Be Part
                                             <br>Of Our
-                                            <br>Story!</h4>
+                                            <br>Story! </h4>
                                         </div>
                                     </li>
                                 </ul>
@@ -365,35 +365,6 @@
                     </div>
                 </div>
             </section>
-
-            <!-- Clients Aside -->
-            <aside class="clients">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <a href="#">
-                                <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                            </a>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <a href="#">
-                                <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                            </a>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <a href="#">
-                                <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                            </a>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <a href="#">
-                                <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </aside>
-
             <!-- Contact Section -->
             <section id="contact">
                 <div class="container">
