--- a/UI/search.html
+++ b/UI/search.html
@@ -96,43 +96,6 @@
 
         </header>
         <div>
-            <!-- Services Section -->
-            <section id="services">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12 text-center">
-                            <h2 class="section-heading">Services</h2>
-                            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                        </div>
-                    </div>
-                    <div class="row text-center">
-                        <div class="col-md-4">
-                            <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                                <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                            </span>
-                            <h4 class="service-heading">E-Commerce</h4>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                        </div>
-                        <div class="col-md-4">
-                            <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                                <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                            </span>
-                            <h4 class="service-heading">Responsive Design</h4>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                        </div>
-                        <div class="col-md-4">
-                            <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                                <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                            </span>
-                            <h4 class="service-heading">Web Security</h4>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
             <!-- MOST USEFUL SECTION, YOU CAN HAVE ALL THE EVENTS HERE -->
             <!-- Portfolio Grid Section -->
             <section id="portfolio" class="bg-light-gray">
@@ -294,7 +257,7 @@
                                     <div class="timeline-panel">
                                         <div class="timeline-heading">
                                             <h4>May 2017</h4>
-                                            <h4 class="subheading">Coming soon Phase...</h4>
+                                            <h4 class="subheading">Coming Soon Phase...</h4>
                                         </div>
                                         <div class="timeline-body">
                                             <p class="text-muted">Algorithms would store and detect all the similarities between different places on instagram, and Facebook. Instead of only looking at hashtags, it would also look at pictures. Map all usernames from different social media to point to one specific user</p>
@@ -371,40 +334,34 @@
                     <div class="row">
                         <div class="col-lg-12 text-center">
                             <h2 class="section-heading">Contact Us</h2>
-                            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                            <h3 class="section-subheading text-muted">Using multiple different platforms, we provide support 24/7</h3>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <form name="sentMessage" id="contactForm" novalidate>
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                                            <p class="help-block text-danger"></p>
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                                            <p class="help-block text-danger"></p>
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                            <p class="help-block text-danger"></p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                            <p class="help-block text-danger"></p>
-                                        </div>
-                                    </div>
-                                    <div class="clearfix"></div>
-                                    <div class="col-lg-12 text-center">
-                                        <div id="success"></div>
-                                        <button type="submit" class="btn btn-xl">Send Message</button>
-                                    </div>
-                                </div>
-                            </form>
+
+                    <div class="row text-center">
+                        <div class="col-md-4">
+                            <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                <i class="fa fa-phone fa-stack-1x fa-inverse"></i>
+                            </span>
+                            <h4 class="service-heading" style="color: white;">Call</h4>
+                            <p class="text-muted" style="color: #fec503;">You could call us at 1-800-EvntFrd</p>
+                        </div>
+                        <div class="col-md-4">
+                            <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                            </span>
+                            <h4 class="service-heading" style="color: white;">Email</h4>
+                            <p class="text-muted" style="color: #fec503;">You could email us at eventlyFriends@gmail.com</p>
+                        </div>
+                        <div class="col-md-4">
+                            <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                <i class="fa fa-cloud fa-stack-1x fa-inverse"></i>
+                            </span>
+                            <h4 class="service-heading" style="color: white;">Social Media</h4>
+                            <p class="text-muted" style="color: #fec503;">You could message us at eventlyFriends on facebook.com or tweet us at eventlyFriends</p>
                         </div>
                     </div>
                 </div>
