--- a/UI/search.html
+++ b/UI/search.html
@@ -13,25 +13,22 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/heatmap.js"></script>
+    <script src="https://code.highcharts.com/modules/treemap.js"></script>
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
         <!-- Theme CSS -->
     <link href="css/agency.min.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js" integrity="sha384-0s5Pv64cNZJieYFkXYOTId2HMA2Lfb6q2nAcx2n0RTLUnCAoTTsS0nKEO27XyKcY" crossorigin="anonymous"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js" integrity="sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo" crossorigin="anonymous"></script>
-        <![endif]-->
-
+    <link href="css/hs.css" rel="stylesheet">
     </head>
 
     <body id="page-top" class="index">
@@ -108,6 +105,8 @@
                             <h3 class="section-subheading text-muted">Click on the event to explore who is attending it</h3>
                         </div>
                     </div>
+
+                    
                     <div class="row">
                         <div class="col-md-12 col-sm-12 col-lg-6 portfolio-item">
                             <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
@@ -139,11 +138,22 @@
                             </div>
                         </div>
                     </div>
+                    
                 </div>
             </section>
-
+            <!--HeapMap-->
+            <section id="popularity" class="bg-light-gray" style="display:none;">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h2 class="section-heading">Popularity Map</h2>
+                            <h3 class="section-subheading text-muted">HeatMap based on Event popularity on social Media</h3>
+                            <div id="heatmap"></div>
+                        </div>
+                </div>
+            </section>
             <!-- About Section -->
-            <section id="about">
+            <section id="about" >
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
